--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,29 @@
 body {
   margin: 0;
+  text-align:center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("./FONDO_PI.png")
+  
+  ;
+  
+  
+}
+.divMayor{
+  background-color: rgb(232, 241, 242);
+  display: inline;
+  height: 700px;
+  width: 700px;
+
+  padding:10px;
+  
+
+}
+.div{
+  background-color: rgb(232, 241, 242);
 }
 
 code {
