--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,25 +6,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("./FONDO_PI.png")
-  
-  ;
-  
-  
+  background-image: url("./ShovelFondo.png");
+  background-size:  100vw 100vh;
+  background-repeat: no-repeat;
+  background-color: #4a2c00;
 }
-.divMayor{
-  background-color: rgb(232, 241, 242);
-  display: inline;
-  height: 700px;
-  width: 700px;
 
-  padding:10px;
-  
-
-}
-.div{
-  background-color: rgb(232, 241, 242);
-}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
